# restgdf

./: .coverage  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  COVERAGE.md  Dockerfile  LICENSE  MIGRATION.md  README.md  SECURITY.md  dataripper_scratch.py  docker-compose.yml  post_update.bat  pre_update.bat  pyproject.toml  readthedocs.yaml  requirements-dev.txt  requirements.txt  setup.py  update.bat  update_in_docker.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yml
.github/scripts/: generate_coverage_badge.py
.github/workflows/: bumpver.yml  coverage.yml  publish_github_release.yml  publish_on_pypi.yml  pytest.yml  readthedocs.yml  verify_attestation.yml
coverage_html_report/: d_7bc7ea16cb682238___init___py.html  d_7bc7ea16cb682238__getgdf_py.html  d_7bc7ea16cb682238__getinfo_py.html  index.html  status.json
docs/: adapters.rst  authentication.rst  changelog.md  conf.py  configuration.rst  errors.rst  index.rst  migration.md  migration.rst  models.rst  modules.rst  quickstart.md  requirements.txt  resilience.rst  restgdf.rst  telemetry.rst  utils.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  restgdf.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  restgdf.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html  restgdf.html
docs/_build/html/_sources/: restgdf.rst.txt
docs/recipes/: observability.md  streaming.md  tracing.md
getgdf/: core.py  helpers.py
restgdf/: __init__.py  _compat.py  _config.py  _getgdf.py  _getinfo.py  _logging.py  _types.py  app.py  compat.py  errors.py  utils.py
restgdf/_client/: __init__.py  _protocols.py  query_options.py  request.py
restgdf/_models/: __init__.py  _drift.py  _errors.py  _settings.py  crawl.py  credentials.py  responses.py
restgdf/adapters/: __init__.py  dict.py  geopandas.py  pandas.py  stream.py
restgdf/directory/: __init__.py  _crawl.py  directory.py
restgdf/featurelayer/: __init__.py  _getgdf.py  _getinfo.py  featurelayer.py
restgdf/resilience/: __init__.py  _bounded_retry.py  _errors.py  _limiter.py  _retry.py
restgdf/telemetry/: __init__.py  _correlation.py  _instrumentor.py  _spans.py
restgdf/utils/: __init__.py  _concurrency.py  _deprecations.py  _geometry.py  _http.py  _metadata.py  _optional.py  _pagination.py  _query.py  _stats.py  crawl.py  getgdf.py  getinfo.py  token.py  utils.py
scripts/: bumpver_stamp_date.py
tests/: __init__.py  _telemetry_utils.py  conftest.py  id_schema_fixtures.py  pagination_fixtures.py  test_Directory.py  test_FeatureLayer.py  test_Rest.py  test_adapters_dict.py  test_adapters_geopandas.py  test_adapters_pandas.py  test_adapters_stream.py  test_advanced_query_capabilities.py  test_async_http_session_protocol.py  test_auth_subtypes.py  test_base_install.py  test_characterization.py  test_choose_verb_live.py  test_citation_cff_version.py  test_compat.py  test_compat_helper.py  test_compat_helpers.py  test_concurrency.py  test_concurrency_nesting.py  test_config.py  test_crawl.py  test_crawl_report.py  test_credentials_coverage.py  test_date_normalization.py  test_deprecations.py  test_directory_typed.py  test_domain_verb_seam.py  test_error_attribute_population.py  test_error_format_characterization.py  test_error_format_fixtures.py  test_error_mro.py  test_errors_shim.py  test_exception_taxonomy.py  test_feature_count_retry_delegation.py  test_feature_count_timeout_retry.py  (+79 more)
tests/_client/: test_query_options.py  test_request.py
tests/error_format_fixtures/: count_response_text_plain.txt  generate_token_default_html_response.html  generate_token_invalid_credentials_error.json
tests/fixtures/pagination/: metadata_missing_supports_pagination.json  metadata_supports_pagination_false.json  query_exceeded_transfer_limit_empty_features.json  query_exceeded_transfer_limit_short_page.json  query_limit_metadata.json
